--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://vyomgarud-backend.onrender.com
-VITE_WS_URL=wss://vyomgarud-backend.onrender.com
+VITE_API_URL=https://vyomgarud-dashboard-backend.onrender.com
+VITE_WS_URL=wss://vyomgarud-dashboard-backend.onrender.com
